crates/toml_edit/tests/snapshots/invalid/integer/capital-bin.stderr
TOML parse error at line 1, column 15
  |
1 | capital-bin = 0B0
  |               ^^
radix must be lowercase, expected `0b`
